--- a/src/_locales/am/messages.json
+++ b/src/_locales/am/messages.json
@@ -1,20 +1,26 @@
 {
   "extName": {
-    "message": "የበስተጀርባ ምስልን ይመልከቱ"
+    "message": "የበስተጀርባ ምስል ይመልከቱ"
   },
   "extDescription": {
-    "message": "በአውድ ምናሌው ውስጥ \"የበስተጀርባ ምስልን ይመልከቱ\""
+    "message": "ወደ አውድ ምናሌው «የበስተጀርባ ምስል ይመልከቱ» ያክላል።"
   },
-  "title": {
-    "message": "የበስተጀርባ ምስልን ይመልከቱ"
+  "review": {
+    "message": "ግምገማ"
+  },
+  "donation": {
+    "message": "ልገሳ"
   },
   "security": {
-    "message": "ለደህንነት ሲባል ቅጥያው በዚህ ገጽ ላይ አይሰራም።"
+    "message": "ቅጥያው በልዩ ገጾች ላይ እንዲሠራ አይፈቀድለትም።"
   },
   "reload": {
-    "message": "እባክዎ ትሩን እንደገና ይጫኑት።"
+    "message": "ቅጥያውን ከጫኑ ወይም ካዘመኑ በኋላ ገጾችን እንደገና ይጫኑ።"
   },
   "failure": {
-    "message": "የበስተጀርባውን ምስል ማግኘት አልተሳካም።\nችግር ሪፖርት ያድርጉ?"
+    "message": "የበስተጀርባ ምስሎችን ማየት አልተቻለም"
+  },
+  "report": {
+    "message": "ችግር ሪፖርት ያድርጉ?"
   }
 }
