--- a/src/_locales/bg/messages.json
+++ b/src/_locales/bg/messages.json
@@ -1,20 +1,26 @@
 {
   "extName": {
-    "message": "Преглед на фоновото изображение"
+    "message": "Преглед на фоново изображение"
   },
   "extDescription": {
-    "message": "\"Преглед на фоновото изображение\" в контекстното меню."
+    "message": "Добавя „Преглед на фоново изображение“ към контекстното меню."
   },
-  "title": {
-    "message": "Преглед на фоновото изображение"
+  "review": {
+    "message": "Преглед"
+  },
+  "donation": {
+    "message": "Дарение"
   },
   "security": {
-    "message": "Разширението не работи на тази страница от съображения за сигурност."
+    "message": "Разширението не може да се изпълнява на специални страници."
   },
   "reload": {
-    "message": "Моля, презаредете раздела."
+    "message": "Презаредете страниците след инсталиране или актуализиране на разширението."
   },
   "failure": {
-    "message": "Неуспешно получаване на фоновото изображение.\nДа докладвате за проблем?"
+    "message": "Не могат да се видят фонови изображения"
+  },
+  "report": {
+    "message": "Да докладвате за проблем?"
   }
 }
