--- a/src/_locales/el/messages.json
+++ b/src/_locales/el/messages.json
@@ -1,20 +1,26 @@
 {
   "extName": {
-    "message": "Προβολή εικόνας παρασκηνίου"
+    "message": "Προβολή εικόνας φόντου"
   },
   "extDescription": {
-    "message": "\"Προβολή εικόνας παρασκηνίου\" στο μενού περιβάλλοντος."
+    "message": "Προσθέτει «Προβολή εικόνας φόντου» στο μενού περιβάλλοντος."
   },
-  "title": {
-    "message": "Προβολή εικόνας παρασκηνίου"
+  "review": {
+    "message": "Ανασκόπηση"
+  },
+  "donation": {
+    "message": "Δωρεά"
   },
   "security": {
-    "message": "Η επέκταση δεν λειτουργεί σε αυτήν τη σελίδα για λόγους ασφαλείας."
+    "message": "Η επέκταση δεν επιτρέπεται να εκτελείται σε ειδικές σελίδες."
   },
   "reload": {
-    "message": "Φορτώστε ξανά την καρτέλα."
+    "message": "Επαναλάβετε τη φόρτωση σελίδων μετά την εγκατάσταση ή την ενημέρωση της επέκτασης."
   },
   "failure": {
-    "message": "Αποτυχία λήψης της εικόνας φόντου.\nΑναφέρετε ένα πρόβλημα?"
+    "message": "Δεν είναι δυνατή η προβολή εικόνων φόντου"
+  },
+  "report": {
+    "message": "Αναφέρετε ένα πρόβλημα?"
   }
 }
