--- a/src/_locales/es_419/messages.json
+++ b/src/_locales/es_419/messages.json
@@ -3,7 +3,7 @@
     "message": "Ver imagen de fondo"
   },
   "extDescription": {
-    "message": "Agrega «Ver imagen de fondo» al menú contextual."
+    "message": "Agrega “Ver imagen de fondo” al menú contextual."
   },
   "review": {
     "message": "Revisar"
