--- a/src/_locales/hi/messages.json
+++ b/src/_locales/hi/messages.json
@@ -3,18 +3,24 @@
     "message": "पृष्ठभूमि छवि देखें"
   },
   "extDescription": {
-    "message": "संदर्भ मेनू में \"पृष्ठभूमि छवि देखें\"।"
+    "message": "संदर्भ मेनू में “पृष्ठभूमि छवि देखें” जोड़ता है।"
   },
-  "title": {
-    "message": "पृष्ठभूमि छवि देखें"
+  "review": {
+    "message": "समीक्षा"
+  },
+  "donation": {
+    "message": "दान"
   },
   "security": {
-    "message": "एक्सटेंशन सुरक्षा कारणों से इस पृष्ठ पर काम नहीं करता है।"
+    "message": "एक्सटेंशन को विशेष पृष्ठों पर चलाने की अनुमति नहीं है."
   },
   "reload": {
-    "message": "कृपया टैब पुनः लोड करें।"
+    "message": "एक्सटेंशन इंस्टॉल या अपडेट करने के बाद पृष्ठों को पुनः लोड करें।"
   },
   "failure": {
-    "message": "पृष्ठभूमि छवि प्राप्त करने में विफल।\nमामले की रिपोर्ट करें?"
+    "message": "पृष्ठभूमि छवियाँ नहीं देख सकते"
+  },
+  "report": {
+    "message": "मामले की रिपोर्ट करें?"
   }
 }
