--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -5,7 +5,7 @@
   "extDescription": {
     "message": "コンテキストメニューに「背景画像を表示」を追加します。"
   },
-  "feedback": {
+  "review": {
     "message": "評価"
   },
   "donation": {
