--- a/src/_locales/nl/messages.json
+++ b/src/_locales/nl/messages.json
@@ -3,18 +3,24 @@
     "message": "Achtergrondafbeelding bekijken"
   },
   "extDescription": {
-    "message": "\"Achtergrondafbeelding bekijken\" in contextmenu."
+    "message": "Voegt „Achtergrondafbeelding bekijken” toe aan het contextmenu."
   },
-  "title": {
-    "message": "Achtergrondafbeelding bekijken"
+  "review": {
+    "message": "Beoordeling"
+  },
+  "donation": {
+    "message": "Donatie"
   },
   "security": {
-    "message": "De extensie werkt om veiligheidsredenen niet op deze pagina."
+    "message": "De extensie mag niet op speciale pagina's worden uitgevoerd."
   },
   "reload": {
-    "message": "Laad het tabblad opnieuw."
+    "message": "Laad pagina's opnieuw nadat u de extensie hebt geïnstalleerd of bijgewerkt."
   },
   "failure": {
-    "message": "Kan de achtergrondafbeelding niet krijgen.\nEen probleem melden?"
+    "message": "Kan achtergrondafbeeldingen niet bekijken"
+  },
+  "report": {
+    "message": "Een probleem melden?"
   }
 }
