--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,20 +1,26 @@
 {
   "extName": {
-    "message": "Открыть фоновое изображение"
+    "message": "Просмотр фонового изображения"
   },
   "extDescription": {
-    "message": "\"Открыть фоновое изображение\" в контекстном меню."
+    "message": "Добавляет «Просмотр фонового изображения» в контекстное меню."
   },
-  "title": {
-    "message": "Открыть фоновое изображение"
+  "review": {
+    "message": "Обзор"
+  },
+  "donation": {
+    "message": "Пожертвование"
   },
   "security": {
-    "message": "Расширение не работает на этой странице по соображениям безопасности."
+    "message": "Расширению не разрешен запуск на специальных страницах."
   },
   "reload": {
-    "message": "Перезагрузите вкладку."
+    "message": "Перезагружайте страницы после установки или обновления расширения."
   },
   "failure": {
-    "message": "Не удалось получить фоновое изображение.\nЖелаете сообщить о проблеме?"
+    "message": "Невозможно просмотреть фоновые изображения"
+  },
+  "report": {
+    "message": "Сообщить о проблеме?"
   }
 }
