--- a/src/_locales/th/messages.json
+++ b/src/_locales/th/messages.json
@@ -3,18 +3,24 @@
     "message": "ดูภาพพื้นหลัง"
   },
   "extDescription": {
-    "message": "\"ดูภาพพื้นหลัง\" ในเมนูบริบท"
+    "message": "เพิ่ม “ดูภาพพื้นหลัง” ลงในเมนูบริบท"
   },
-  "title": {
-    "message": "ดูภาพพื้นหลัง"
+  "review": {
+    "message": "ทบทวน"
+  },
+  "donation": {
+    "message": "บริจาค"
   },
   "security": {
-    "message": "ส่วนขยายไม่ทำงานในหน้านี้ด้วยเหตุผลด้านความปลอดภัย"
+    "message": "ไม่อนุญาตให้ส่วนขยายทำงานบนหน้าพิเศษ"
   },
   "reload": {
-    "message": "โปรดโหลดแท็บซ้ำอีกครั้ง"
+    "message": "โหลดหน้าซ้ำหลังจากติดตั้งหรืออัปเดตส่วนขยาย"
   },
   "failure": {
-    "message": "ไม่สามารถรับภาพพื้นหลัง\nรายงานปัญหา?"
+    "message": "ไม่สามารถดูภาพพื้นหลังได้"
+  },
+  "report": {
+    "message": "รายงานปัญหา?"
   }
 }
