--- a/src/_locales/uk/messages.json
+++ b/src/_locales/uk/messages.json
@@ -1,20 +1,26 @@
 {
   "extName": {
-    "message": "Переглянути зображення тла"
+    "message": "Переглянути фонове зображення"
   },
   "extDescription": {
-    "message": "\"Переглянути зображення тла\" в контекстному меню."
+    "message": "Додає «Переглянути фонове зображення» до контекстного меню."
   },
-  "title": {
-    "message": "Переглянути зображення тла"
+  "review": {
+    "message": "огляд"
+  },
+  "donation": {
+    "message": "Пожертвування"
   },
   "security": {
-    "message": "Розширення на цій сторінці не працює з міркувань безпеки."
+    "message": "Розширення не можна запускати на спеціальних сторінках."
   },
   "reload": {
-    "message": "Перезавантажте вкладку."
+    "message": "Перезавантажте сторінки після встановлення або оновлення розширення."
   },
   "failure": {
-    "message": "Не вдалося отримати фонове зображення.\nБажаєте повідомити про помилку?"
+    "message": "Неможливо переглянути фонові зображення"
+  },
+  "report": {
+    "message": "Повідомити про проблему?"
   }
 }
