--- a/src/_locales/bn/messages.json
+++ b/src/_locales/bn/messages.json
@@ -1,20 +1,26 @@
 {
   "extName": {
-    "message": "পটভূমির ছবি প্রদর্শন"
+    "message": "ভিউ ব্যাকগ্রাউন্ড ইমেজ"
   },
   "extDescription": {
-    "message": "প্রসঙ্গ মেনুতে \"পটভূমির ছবি প্রদর্শন\"।"
+    "message": "প্রসঙ্গ মেনুতে “ভিউ ব্যাকগ্রাউন্ড ইমেজ” যোগ করে।"
   },
-  "title": {
-    "message": "পটভূমির ছবি প্রদর্শন"
+  "review": {
+    "message": "পুনঃমূল্যায়ন"
+  },
+  "donation": {
+    "message": "দান"
   },
   "security": {
-    "message": "সুরক্ষা কারণে এই পৃষ্ঠায় এক্সটেনশন কাজ করে না।"
+    "message": "এক্সটেনশনটি বিশেষ পৃষ্ঠাগুলিতে চালানোর অনুমতি নেই৷"
   },
   "reload": {
-    "message": "দয়া করে ট্যাবটি পুনরায় লোড করুন।"
+    "message": "এক্সটেনশন ইনস্টল বা আপডেট করার পরে পৃষ্ঠাগুলি পুনরায় লোড করুন।"
   },
   "failure": {
-    "message": "পটভূমি চিত্র পেতে ব্যর্থ।\nএকটি সমস্যা রিপোর্ট?"
+    "message": "ব্যাকগ্রাউন্ডের ছবি দেখা যাবে না"
+  },
+  "report": {
+    "message": "একটি সমস্যা রিপোর্ট?"
   }
 }
