--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -3,18 +3,24 @@
     "message": "Afficher l'image de fond"
   },
   "extDescription": {
-    "message": "\"Afficher l'image de fond\" dans le menu contextuel."
+    "message": "Ajoute « Afficher l'image de fond » au menu contextuel."
   },
-  "title": {
-    "message": "Afficher l'image de fond"
+  "review": {
+    "message": "Revoir"
+  },
+  "donation": {
+    "message": "Don"
   },
   "security": {
-    "message": "L'extension ne fonctionne pas sur cette page pour des raisons de sécurité."
+    "message": "L'extension n'est pas autorisée à s'exécuter sur des pages spéciales."
   },
   "reload": {
-    "message": "Veuillez recharger l'onglet."
+    "message": "Rechargez les pages après l'installation ou la mise à jour de l'extension."
   },
   "failure": {
-    "message": "Impossible d'obtenir l'image de fond.\nSignaler un problème?"
+    "message": "Impossible d'afficher l'image de fond"
+  },
+  "report": {
+    "message": "Signaler un problème?"
   }
 }
