--- a/src/_locales/sr/messages.json
+++ b/src/_locales/sr/messages.json
@@ -3,18 +3,24 @@
     "message": "Прикажи позадинску слику"
   },
   "extDescription": {
-    "message": "\"Прикажи позадинску слику\" у контекстном менију."
+    "message": "Додаје „Прикажи позадинску слику“ у контекстни мени."
   },
-  "title": {
-    "message": "Прикажи позадинску слику"
+  "review": {
+    "message": "Преглед"
+  },
+  "donation": {
+    "message": "Донација"
   },
   "security": {
-    "message": "Проширење не ради на овој страници из безбедносних разлога."
+    "message": "Екстензија није дозвољена да се покреће на посебним страницама."
   },
   "reload": {
-    "message": "Поново учитајте картицу."
+    "message": "Поново учитајте странице након инсталирања или ажурирања екстензије."
   },
   "failure": {
-    "message": "Добијање позадинске слике није успело.\nПријавите проблем?"
+    "message": "Не могу видети позадинске слике"
+  },
+  "report": {
+    "message": "Пријавите проблем?"
   }
 }
