--- a/src/_locales/sw/messages.json
+++ b/src/_locales/sw/messages.json
@@ -1,20 +1,26 @@
 {
   "extName": {
-    "message": "Angalia Picha ya Mandharinyuma"
+    "message": "Tazama Picha ya Mandharinyuma"
   },
   "extDescription": {
-    "message": "\"Angalia Picha ya Mandharinyuma\" kwenye menyu ya muktadha."
+    "message": "Inaongeza “Tazama Picha ya Mandharinyuma” kwenye menyu ya muktadha."
   },
-  "title": {
-    "message": "Angalia Picha ya Mandharinyuma"
+  "review": {
+    "message": "Kagua"
+  },
+  "donation": {
+    "message": "Mchango"
   },
   "security": {
-    "message": "Ugani haufanyi kazi kwenye ukurasa huu kwa sababu za usalama."
+    "message": "Kiendelezi hakiruhusiwi kuendeshwa kwenye kurasa maalum."
   },
   "reload": {
-    "message": "Tafadhali pakia tena kichupo hicho."
+    "message": "Pakia upya kurasa baada ya kusakinisha au kusasisha kiendelezi."
   },
   "failure": {
-    "message": "Imeshindwa kupata picha ya mandharinyuma.\nRipoti suala?"
+    "message": "Haiwezi kuona picha za usuli"
+  },
+  "report": {
+    "message": "Ripoti suala?"
   }
 }
