--- a/src/_locales/vi/messages.json
+++ b/src/_locales/vi/messages.json
@@ -3,18 +3,24 @@
     "message": "Xem ảnh nền"
   },
   "extDescription": {
-    "message": "\"Xem ảnh nền\" trong menu ngữ cảnh."
+    "message": "Thêm “Xem hình nền” vào menu ngữ cảnh."
   },
-  "title": {
-    "message": "Xem ảnh nền"
+  "review": {
+    "message": "Ôn tập"
+  },
+  "donation": {
+    "message": "Quyên góp"
   },
   "security": {
-    "message": "Tiện ích mở rộng không hoạt động trên trang này vì lý do bảo mật."
+    "message": "Tiện ích mở rộng không được phép chạy trên các trang đặc biệt."
   },
   "reload": {
-    "message": "Vui lòng tải lại tab."
+    "message": "Tải lại trang sau khi cài đặt hoặc cập nhật tiện ích mở rộng."
   },
   "failure": {
-    "message": "Không thể có được hình ảnh nền.\nBáo cáo một vấn đề?"
+    "message": "Không thể xem hình nền"
+  },
+  "report": {
+    "message": "Báo cáo một vấn đề?"
   }
 }
