--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -5,7 +5,7 @@
   "extDescription": {
     "message": "将「显示背景图像」添加到上下文菜单。"
   },
-  "feedback": {
+  "review": {
     "message": "评价"
   },
   "donation": {
