--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -5,7 +5,7 @@
   "extDescription": {
     "message": "將「顯示背景圖像」新增至上下文功能表。"
   },
-  "feedback": {
+  "review": {
     "message": "評價"
   },
   "donation": {
